--- a/public/appStyle.css
+++ b/public/appStyle.css
@@ -15,6 +15,15 @@ html, body {
   margin: 20px;
 }
 
+.footer {
+  bottom: 10px;
+  font-size: 10pt;
+  left: 50%;
+  position: absolute;
+  margin: 0;
+  transform: translate(-50%, 0);
+}
+
 .game-container {
   margin: 20px 0;
 }
